US19968-Fixed alignment of the arrow to the Go To Dashboard text.

--- a/app/shared/components/my-performance-table/my-performance-table.component.scss
+++ b/app/shared/components/my-performance-table/my-performance-table.component.scss
@@ -617,7 +617,7 @@ div.ctv {
       /deep/td.left-col {
 
         div.description-line-1 {
-          padding-top: 5px;
+          padding-top: 2px;
           width: 114px;
 
           &.link {
